dist/common/common-module/src/logs/error/2026-05-24.log
2026-05-24 03:04:11 [31merror[39m: uncaughtException: Identifier 'finalResponse' has already been declared
/Users/varrenyam/projects/rugio/hexa/rule-mudra/src/services/onboarding.service.ts:4154
        const finalResponse = {};
              ^

SyntaxError: Identifier 'finalResponse' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1637:18)
    at Module._compile (node:internal/modules/cjs/loader:1679:20)
    at Module.m._compile (/Users/varrenyam/projects/rugio/hexa/rule-mudra/node_modules/ts-node/src/index.ts:1618:23)
    at node:internal/modules/cjs/loader:1838:10
    at Object.require.extensions.<computed> [as .ts] (/Users/varrenyam/projects/rugio/hexa/rule-mudra/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (/Users/varrenyam/projects/rugio/hexa/rule-mudra/src/controllers/customers.controller.ts:72:1)
    at Module._compile (node:internal/modules/cjs/loader:1705:14)
    at Module.m._compile (/Users/varrenyam/projects/rugio/hexa/rule-mudra/node_modules/ts-node/src/index.ts:1618:23)
    at node:internal/modules/cjs/loader:1838:10
    at Object.require.extensions.<computed> [as .ts] (/Users/varrenyam/projects/rugio/hexa/rule-mudra/node_modules/ts-node/src/index.ts:1621:12)
